--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-
+### Python ###
 **/__pycache__/
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+.venv
 
